--- a/apps/fire-safety/package.json
+++ b/apps/fire-safety/package.json
@@ -42,6 +42,7 @@
     "devDependencies": {
         "@clerk/testing": "^1.10.4",
         "@playwright/test": "^1.54.1",
+        "@types/react-plotly.js": "^2.6.3",
         "dotenv": "^17.2.0",
         "prettier": "^3.1.0",
         "prettier-plugin-tailwindcss": "^0.5.7"
