--- a/apps/fire-safety/package.json
+++ b/apps/fire-safety/package.json
@@ -1,23 +1,25 @@
 {
-    "name": "aresalab",
+    "name": "fire-safety-dashboard",
     "version": "1.0.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "upload-data": "node upload-blob.js"
     },
     "dependencies": {
         "@clerk/nextjs": "^5.0.0",
         "@supabase/supabase-js": "^2.39.0",
         "@tanstack/react-query": "^5.0.0",
         "@tanstack/react-table": "^8.10.0",
-        "@types/leaflet": "^1.9.21",
+        "@types/leaflet": "^1.9.20",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "@vercel/blob": "^2.0.0",
+        "@vercel/blob": "^0.28.0",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.2.25",
@@ -30,7 +32,7 @@
         "react-dom": "^18",
         "react-leaflet": "^4.2.1",
         "react-markdown": "^10.1.0",
-        "recharts": "^3.5.0",
+        "recharts": "^3.1.0",
         "rehype-katex": "^7.0.1",
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.1",
