--- a/apps/aresalab/package.json
+++ b/apps/aresalab/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@clerk/nextjs": "^5.0.0",
         "@supabase/supabase-js": "^2.39.0",
+        "@tailwindcss/typography": "^0.5.19",
         "@tanstack/react-query": "^5.0.0",
         "@tanstack/react-table": "^8.10.0",
         "@types/leaflet": "^1.9.20",
@@ -20,10 +21,12 @@
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.2.25",
-        "katex": "^0.16.22",
+        "gray-matter": "^4.0.3",
+        "katex": "^0.16.25",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.300.0",
         "next": "14.2.25",
+        "next-mdx-remote": "^5.0.0",
         "postcss": "^8",
         "react": "^18",
         "react-dom": "^18",
