--- a/apps/aresalab/tsconfig.json
+++ b/apps/aresalab/tsconfig.json
@@ -20,8 +20,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./app/*"],
-      "@/lib/*": ["./app/utils/*"]
+      "@/*": ["./*"],
+      "@/app/*": ["./app/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
