--- a/apps/aresa-studio/public/manifest.json
+++ b/apps/aresa-studio/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "ARESA Studio",
   "short_name": "ARESA",
-  "description": "Universal database management - Beautiful web UI to query PostgreSQL, MySQL, BigQuery, SQLite, ClickHouse, and more",
+  "description": "Universal database management - Query PostgreSQL, MySQL, BigQuery, SQLite, ClickHouse, and more",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f172a",
@@ -9,11 +9,7 @@
   "orientation": "any",
   "scope": "/",
   "lang": "en-US",
-  "categories": [
-    "developer",
-    "database",
-    "productivity"
-  ],
+  "categories": ["developer", "database", "productivity"],
   "icons": [
     {
       "src": "/favicon.svg",
@@ -22,38 +18,51 @@
       "purpose": "any"
     },
     {
-      "src": "/icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/favicon-48x48.png",
-      "sizes": "48x48",
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
     },
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
       "purpose": "maskable"
     }
   ],
@@ -63,28 +72,28 @@
       "short_name": "Query",
       "description": "Execute SQL queries",
       "url": "/query",
-      "icons": [{ "src": "/favicon.svg", "sizes": "any" }]
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     },
     {
       "name": "Schema Explorer",
       "short_name": "Schema",
       "description": "Browse database schemas",
       "url": "/schema",
-      "icons": [{ "src": "/favicon.svg", "sizes": "any" }]
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     },
     {
       "name": "Connections",
       "short_name": "Connect",
       "description": "Manage database connections",
       "url": "/connections",
-      "icons": [{ "src": "/favicon.svg", "sizes": "any" }]
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     },
     {
       "name": "Terminal",
       "short_name": "CLI",
       "description": "ARESA CLI terminal",
       "url": "/terminal",
-      "icons": [{ "src": "/favicon.svg", "sizes": "any" }]
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     }
   ],
   "prefer_related_applications": false
