--- a/apps/aresadb-studio/public/manifest.json
+++ b/apps/aresadb-studio/public/manifest.json
@@ -4,16 +4,12 @@
   "description": "High-performance multi-model database - Query, visualize, and explore your data with vectors and RAG",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
-  "theme_color": "#8b5cf6",
+  "background_color": "#0d1117",
+  "theme_color": "#10b981",
   "orientation": "any",
   "scope": "/",
   "lang": "en-US",
-  "categories": [
-    "developer",
-    "database",
-    "productivity"
-  ],
+  "categories": ["developer", "database", "productivity", "healthcare"],
   "icons": [
     {
       "src": "/favicon.svg",
@@ -22,16 +18,52 @@
       "purpose": "any"
     },
     {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon512_maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "shortcuts": [
@@ -39,21 +71,30 @@
       "name": "Query Editor",
       "short_name": "Query",
       "description": "Execute SQL queries",
-      "url": "/query"
+      "url": "/query",
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     },
     {
       "name": "Vector Search",
       "short_name": "Vectors",
       "description": "Explore vector embeddings",
-      "url": "/vectors"
+      "url": "/vectors",
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     },
     {
       "name": "RAG Playground",
       "short_name": "RAG",
       "description": "Test retrieval-augmented generation",
-      "url": "/rag"
+      "url": "/rag",
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "Benchmarks",
+      "short_name": "Benchmark",
+      "description": "View performance benchmarks",
+      "url": "/benchmarks",
+      "icons": [{ "src": "/icons/icon-96x96.png", "sizes": "96x96" }]
     }
   ],
   "prefer_related_applications": false
 }
-
