--- a/apps/aresalab/package.json
+++ b/apps/aresalab/package.json
@@ -20,7 +20,7 @@
         "@types/react-dom": "^18",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
-        "eslint-config-next": "14.2.25",
+        "eslint-config-next": "^16.0.7",
         "gray-matter": "^4.0.3",
         "katex": "^0.16.25",
         "leaflet": "^1.9.4",
