--- a/apps/fire-safety/package.json
+++ b/apps/fire-safety/package.json
@@ -22,7 +22,7 @@
         "@vercel/blob": "^0.23.0",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
-        "eslint-config-next": "14.2.25",
+        "eslint-config-next": "^16.0.7",
         "framer-motion": "^12.23.24",
         "katex": "^0.16.22",
         "leaflet": "^1.9.4",
